*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -24,16 +24,16 @@ Ossa võttaq või õgaüts (päält sürii liikmidõ), kiä mõist [[võro kiil|
 Osavõtmisõst tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjast kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
 ==Minkast kirotaq?==
-Kirotaq või kõgõst, miä om küländ tähtsä, et tuust piäsiq umakeelitseh entsüklopeediäh artikli olõma. Höste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, eissugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] vai [[Setomaa]] ni võro vai seto kultuuriga (nt [[Võromaa inemiseq]], [[Setomaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõht tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüsest 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võisiq ollaq, selle et naidõ teemadõ pääle om veiga pall'o tõisih artiklih näüdät.
+Kirotaq või kõgõst, miä om küländ tähtsä, õt tuust piäsiq umakeelitseh entsüklopeediäh artikli olõma. Höste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, eissugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] vai [[Setomaa]] ni võro vai seto kultuuriga (nt [[Võromaa inemiseq]], [[Setomaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõht tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüsest 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võisiq ollaq, selle õt naidõ teemadõ pääle om veiga pall'o tõisih artiklih näüdät.
 
 ==Kuis kirotaq?==
 Vahtsõ artikli alostamisõs vaodaq teemadõ nimekiräh (vai mõnõh artiklih) sinno huvitava teemaga verevä lingi pääle. Vai kirodaq vahtsõ artikli päälkiri päälehel olõvahe vahtsõ artikli luumisõ kasti ja vaodaq nuppi ''Luuq leht!''. Võit ka valliq joba olõmah olõva lühko artikli ja tuud tävvendäq. Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]].
 
-Vaia olõsiq, et sa panõsiq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärseb ja lugõja saa taa kotsilõ lättist eis perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq tohe-ei, tuu olõsiq tõisi autoridõ loomingu vargus. Külq või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro vai seto kiilde ümbre pandaq.
+Vaia olõsiq, õt sa panõsiq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärseb ja lugõja saa taa kotsilõ lättist eis perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq tohe-ei, tuu olõsiq tõisi autoridõ loomingu vargus. Külq või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro vai seto kiilde ümbre pandaq.
 
 Ku tahat teedäq, määne üts Vikipeediä artikli piäsiq vällä näütämä, loeq ja uuriq esiqsugumaidsi jo kirotõduid artiklit, näütüsest (lühkobist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikebist) [[Hurda Jakob]], [[Iraan]] vai [[Lasits]].
 
-Ku olõt artikli valmist saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklidõ leheküle pääle]], sis saa sürii arvo, et olõt võistlusõst osavõtja. Õgaüts või võistlusõlõ pandaq nii pall'o artiklit ku eis taht.
+Ku olõt artikli valmist saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklidõ leheküle pääle]], sis saa sürii arvo, õt olõt võistlusõst osavõtja. Õgaüts või võistlusõlõ pandaq nii pall'o artiklit ku eis taht.
 
 ==Kiä võistlust kõrraldas ja kiä süriih ommaq?==
 Võistlust kõrraldas MTÜ Wikimedia Eesti.
