--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -8,7 +8,12 @@
 |-
 |<center>'''Võrokeeline artiklivõistlus'''</center>
 <hr align="center" size="4" width="100%">
-* [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osavõtjaq ja artikliq]]
+[[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osavõtjaq ja artikliq]]
+| cellpadding="3" cellspacing="3" style="float:right; margin:5px; border:2px solid; border-color:#CFCFCF; text-size: small; background:#ffffff"
+|[[Pilt:Flag_of_Setomaa.svg|150px|keskel]]
+|-
+|<center>'''Kirodaq seto keeleh!'''</center>
+<hr align="center" size="4" width="100%">
 |}
 
 
