*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -7,6 +7,7 @@
 |[[Pilt:Võrokõisi_lipp.png|150px|keskel]]
 |-
 |<center>'''Võrokeeline artiklivõistlus'''</center>
+<hr align="center" size="4" width="100%">
 |-
 |[[Pilt:Flag_of_Setomaa.svg|150px|keskel]]
 <hr align="center" size="4" width="100%">
