--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -33,7 +33,7 @@ Kirotaq või kõõst, miä om küländ tähtsä, õt tuust piäsiq umakeel'tseh 
 ==Kuis kirotaq?==
 Vahtsõ artikli alostamisõs vaodaq teemadõ nimekiräh (vai mõnõh artiklih) sinno huvitava teemaga verevä lingi pääle. Vai kirodaq vahtsõ artikli päälkiri päälehel olõvahe vahtsõ artikli luumisõ kasti ja vaodaq nuppi ''Luuq leht!''. Võit ka valliq joba olõmah olõva lühko artikli ja tuud tävvendäq. Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]].
 
-Vaia olõsiq, õt sa panõsiq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärseb ja lugõja saa taa kotsilõ lättist eis perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq tohe-ei, tuu olõsiq tõisi autoridõ loomingu vargus. Külq või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro vai seto kiilde ümbre pandaq.
+Vaia olõsiq, õt sa panõsiq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärseb ja lugõja saa taa kotsilõ lättist eis perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq tohe-ei, tuu olõsiq tõisi autoridõ loomingu vargus. K'ulq või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro vai seto kiilde ümbre pandaq.
 
 Ku tahat teedäq, määne üts Vikipeediä artikli piäsiq vällä näütämä, loeq ja uuriq esiqsugumaidsi jo kirotõduid artiklit, näütüsest (lühkobist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikebist) [[Hurda Jakob]], [[Iraan]] vai [[Lasits]].
 
