--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -35,7 +35,7 @@ Vahtsõ artikli alostamisõs vaodaq teemadõ nimekiräh (vai mõnõh artiklih) s
 
 Vaia olõsiq, õt sa panõsiq artiklihe kirjä ka lätte, kost kirotamisõs matõrjaali löüdset, sis om artikli usaldusväärseb ja lugõja saa taa kotsilõ lättist eis perrä kaiaq. Raamatust, internetist vai muialt peris maaha kirotaq tohe-ei, tuu olõsiq tõisi autoridõ loomingu vargus. K'ulq või tõisi kiili vikiartikliid (lühendedült, tävvendedült) võro vai seto kiilde ümbre pandaq.
 
-Ku tahat teedäq, määne üts Vikipeediä artikli piäsiq vällä näütämä, loeq ja uuriq esiqsugumaidsi jo kirotõduid artiklit, näütüsest (lühkobist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikebist) [[Hurda Jakob]], [[Iraan]] vai [[Lasits]].
+Ku tahat teedäq, määne üts Vikipeediä artikli piäsiq vällä näütämä, loeq ja uuriq eissugumaidsi jo kirotõduid artiklit, näütüsest (lühkobist) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikebist) [[Hurda Jakob]], [[Iraan]] vai [[Lasits]].
 
 Ku olõt artikli valmist saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklidõ leheküle pääle]], sis saa sürii arvo, õt olõt võistlusõst osavõtja. Õgaüts või võistlusõlõ pandaq nii pall'o artiklit ku eis taht.
 
