*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -8,12 +8,13 @@
 |-
 |<center>'''Võrokeeline artiklivõistlus'''</center>
 <hr align="center" size="4" width="100%">
+* [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osavõtjaq ja artikliq]]
+<hr align="center" size="4" width="100%">
 |-
 |[[Pilt:Flag_of_Setomaa.svg|150px|keskel]]
 <hr align="center" size="4" width="100%">
 * '''Kirodaq seto keeleh!'''
 <hr align="center" size="4" width="100%">
-* [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osavõtjaq ja artikliq]]
 |}
 
 '''Artiklivõistlust''' peetäs 2013. aastagal võro Vikipeediäh edimäist kõrda. Taaga tahetas saiaq Vikipeediäle mano nii artiklit ku ka kirotajit. 
