*Empty MediaWiki Message*

--- a/Permikomi_Piirkund.mw
+++ b/Permikomi_Piirkund.mw
@@ -1,1 +1,3 @@
 '''Permikomi Ringkond''' ([[permikomi kiil|permikomi keelen]] ''Перем ладорись Коми кытш'', [[vinne kiil|vinne keelen]] ''Коми-Пермяцкий округ''), kuni 2005 '''Permikomi Autonoomnõ Ringkond''', om [[Vinnemaa]] [[Permi krai]] osa. Pääliin om [[Kudõmkar]].
+
+[[et:Permikomi_ringkond]]
