*Empty MediaWiki Message*

--- a/Kogõrijärv.mw
+++ b/Kogõrijärv.mw
@@ -20,7 +20,7 @@
 | vii_hulk = 
 }}
 
-'''Kogõrijärv''' om ümbretsõõri kinniqkasunuisi suumõtsatsidõ hõds'operviga häste muanõ väiku järv [[Navi]] külä lõunõveeren. Kogõrijärve juusk sisse uja põh'a puult, Navi külä kõgõ suurõmbast järvest - [[Põrmujärv]]est. Kogõrijärvest lõunõ poolõ juusk uja edesi [[Võhandu]] jõkkõ. 
+'''Kogõrijärv''' vai '''Kogõrjärv''' om ümbretsõõri kinniqkasunuisi suumõtsatsidõ hõds'operviga häste muanõ väiku järv [[Navi]] külä lõunõveeren. Kogõrijärve juusk sisse uja põh'a puult, Navi külä kõgõ suurõmbast järvest - [[Põrmujärv]]est. Kogõrijärvest lõunõ poolõ juusk uja edesi [[Võhandu]] jõkkõ. 
 
 Kogõrijärve korgõst ja äkilidsest hummogukaldõst üles jääs Navi külä kõgõ korgõmb kotus Treimägi, kost (Ilomäe talost) ommaq peri kunstnik [[Navitroll'a]] ja tähetiidläne [[Kasagu Enn]].
 
