*Empty MediaWiki Message*

--- a/Õuruupa.mw
+++ b/Õuruupa.mw
@@ -2,7 +2,7 @@
 
 '''Õuruupa''' vai '''Õuropa''' (vai ka '''Euruupa''' vai '''Europa''') om üts kuvvõst [[ilmajago|ilmajaost]]. 
 
-Õuruupast põhja jääs [[Põh'a-Iämeri]], õdagu poolõ [[Atlandi suurmeri]], lõunahe [[Vahemeri]] ja hummogu poolõ [[Aasia]]. Õuruupa ja Aasia piir om küländki tinglik, inämbüisi loetas, et tuu lätt [[Uurali mäeq|Uurali mäki]], [[Uurali jõgi|Uurali jõkõ]] ja [[Kaspia meri|Kaspia merd]] pite. 
+Õuruupast põhja jääs [[Põh'a-Iämeri]], õdagu poolõ [[Atlandi suurmeri]], lõunahe [[Vaihõmeri]] ja hummogu poolõ [[Aasia]]. Õuruupa ja Aasia piir om küländki tinglik, inämbüisi loetas, et tuu lätt [[Uurali mäeq|Uurali mäki]], [[Uurali jõgi|Uurali jõkõ]] ja [[Kaspia meri|Kaspia merd]] pite. 
 
 Õuruupa suurus om {{kkm|10180000}}, tuu katt umbõs 2% [[Maa]] pinnast. Ilmajakõst om suurusõ poolõst Õuruupast vähämb õnnõ [[Austraalia ja Okõaania]]. 
 
