--- a/Microsoft.mw
+++ b/Microsoft.mw
@@ -1,4 +1,4 @@
-[[Pilt:Microsoft.svg|150px|right]]
+[[Pilt:Microsoft_logo_and_wordmark.svg|150px|right]]
 
 '''Microsoft Corporation''' om 1975. aastagal [[Gatesi Bill]]i ja [[Alleni Paul]]i luud tarkvarafirma, miä om kuulsas saanuq innekõkkõ uma [[opõrats'oonisüstem]]iga [[Microsoft Windows|Windows]] ja kontoritarkvaraga Microsoft Office.
 
