*Empty MediaWiki Message*

--- a/Araabia_Liiga.mw
+++ b/Araabia_Liiga.mw
@@ -1,4 +1,6 @@
-[[Pilt:League of Arab States members.png|250px|pisi|Araabia Liiga riigiq]]
+[[Pilt:Flag of the Arab League.svg|pisi|paremal|]]
+[[Pilt:Emblem of the Arab League.svg|pisi|paremal|]]
+[[Pilt:Arab League (orthographic projection) updated.svg|250px|pisi|Araabia Liiga riigiq]]
 
 '''Araabia Liiga''' (araabia keelen الجامعة العربية' al-Jāmiʻa al-ʻArabiyya), ammõtlidsõlt '''Araabia Riike Liiga''' om organisats'uun, kohe kuulussõq Lõunõõdagu-[[Aasia]], Põh'a- ja Põh'ahummogu-[[Afriga]] araabiamaaq. Liiga luudi [[Kairo]]n 22. urbõkuu pääväl 1945 kuvvõ liikmõga: [[Egüptüs]], [[Iraak]], [[Jordaania]], [[Liibanon]], [[Saudi Araabia]] ja [[Süüria]]. Prõlla om Araabia Liigan 22 maad.
 
