--- a/Zetod.mw
+++ b/Zetod.mw
@@ -7,7 +7,7 @@ Tõõsõ tsõõrigu "Lätsi tarrõ tagasi" andsiq nä vällä 2008. aastagal. Tu
 
 Näide kolmas helütsõõr "Lätsi sanna" tull' vällä 2010. aastagal. Taa om pääle võetu [[Soomõ]]maal.
 
-==Liikmõd==
+==Liikmõq==
 * [[Vabarna Jalmar]] – [[kitra]], [[karmoška]], laul
 * [[Viskari Jaanus]] – basskitra, laul
 * [[Linnusõ Artur]] – akordion, laul
