/* Kiä või ossa võttaq? */

--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -26,7 +26,7 @@ Võistlust peetäs 2013. aastal 2. lehekuu pääväst (maist) koon'q 2. piimäku
 ==Kiä või ossa võttaq?==
 Ossa võttaq või õgaüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keeleh]] kirotaq. Kiä taht ja mõist, või kirotaq ka tõisih [[lõunõeesti kiil|lõunõeesti keelih]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keeleh]]; ka nuuq artikliq ommaq veiga oodõduq.
 
-Osavõtmisõst tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjast kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
+Osavõtmisõst tulõ hinnäst kõõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjast kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
 
 ==Minkast kirotaq?==
 Kirotaq või kõõst, miä om küländ tähtsä, õt tuust piäsiq umakeel'tseh entsüklopeediäh artikli olõma. Höste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, eissugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] vai [[Setomaa]] ni võro vai seto kultuuriga (nt [[Setomaa inemiseq]], [[nulk|nulgaq]] ('''Setomaa nulkõ artikliq ommaq jo parhilla seto keeleh!'''), [[Võromaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]). A piä-äi kirotama õnnõ võro vai seto as'ost, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõht tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 s'ooh nimekiräh] om näütüsest 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võisiq ollaq, selle õt naidõ teemadõ pääle om veiga pall'o tõisih artiklih näüdät.
