*Empty MediaWiki Message*

--- a/Hiiobi_Otto.mw
+++ b/Hiiobi_Otto.mw
@@ -1,13 +1,13 @@
-'''Hiiobi Ott''' (Ott(o) Hiiop, 29 (17).12.1865 - ?) oll’ Urvastõ kihlkunna viiulimängjä
+'''Hiiobi Otto''' (Ott(o) Hiiop, 29 (17).12.1865 - ?) oll’ Urvastõ kihlkunna viiulimängjä
 
 
-Hiiobi Ott sündünüq  29 (vana kallendri perrä 17.) de’tsembrikuu pääväl 1865 Helme kihlkunna Patkülä valla Talva talon, a elli eloaig Urvasten. Tõsõ kuts’ tedä mitmõ nime perrä: lihtsähe Otto, Talva Otto kah „mulgiss“. Käve säidse talve Vaabina vallakuulin. Pitäq päämädselt põllomiihi amõtit a uma põldu oll vähä: ynnõ katõssa hektäri (25 vakamaad). Olnuq ka tulõkassa president, kümnik, ja vallavolimiis.
+Hiiobi Ott sündünüq  29. (vana kallendri perrä 17.) detsembrikuu pääväl 1865 Helme kihlkunna Patkülä valla Talva talon, a elli eloaig Urvastõn. Tõsõq kutsiq tedä mitmõ nime perrä: lihtsähe Otto, Talva Otto, kutsuti kah „mulgis“. Käve säidse talvõ Vaabina vallakoolin. Pidi päämädselt põllomehe ammõtit, a umma põldu oll' vähä: ynnõ katõssa hektäri (25 vakamaad). Olnuq ka tulõkassa president, kümnik, ja vallavolimiis.
 
-Hiiobi Otto veli mäng’ kah viiulit, ni ka lelle- ja tsõdsõpujaq olnuq viiuldajaq. Kar’atsurrina sõs kui oll 11 aastanõ, meisterdäseq edimädse viiuli karmaniväitsegä haavapuust. Sai määnsegi viiulimuudu mässätüse valmis ni õkvalt naksi mängo opma. 16 aastaselt mäng tä joq ostõdu viiuli pääl ja oll tundsa saajopillimiis. 
+Hiiobi Otto veli mänge kah viiulit, ni ka lellä- ja tsõdsõpujaq olnuq viiuldajaq. Kar’atsuran sõs kui oll 11-aastanõ, meisterd' edimädse viiuli karmaniväidsegä haavapuust. Sai määntsegi viiuli muudu mässätüse valmis ni õkvalt nakas' mängo opma. 16-aastadsõlt mänge tä joq ostõdu viiuli pääl ja oll' tundsa saajopillimiis. 
 
-Ildampa kuq Hiiobi Otto Tartun käve, opseq tan tõist viiulid mängmä ja oppas tuud uma paarilisõlõ, Joakiti Kristjanilõ, kinkaq mängseväq ütehkuuhn innõ edimäst ilmatapõlust. Viil juht’ tä umasäätüq kuuri, kon oll kuuhn kuus miist kiä mängseväq lyytspilli ja viiuliidsi. Esi mäng tä kokko kandlõ, duurkandlõ ja klavõriga.
+Ildampa, kuq Hiiobi Otto Tartun käve, opsõ tan tõist viiulit mängmä ja opas' tuud umalõ paarilisõlõ, Joakiti Kristjanilõ, kinkaq mängseväq ütenkuun inne edimäst ilmatapõlust. Viil juhtõ tä umasäetüt kuuri, kon oll' kuun kuus miist, kiä mängseväq lyytspilli ja viiuliid. Esiq mänge tä kokko kandlõ, duurkandlõ ja klavõriga.
 
-Tampere Herbert tähend’ 1936. aastal timält üles 100 luguhust. Pulsti August võtseq pääle 5-6 lehekuu pääväl 1937. aastal pääliinas 14 luguhust:<br>
+Tampere Herbert tähend’ 1936. aastal timält üles 100 luguhust. Pulsti August võtsõ timält üles 5.-6. lehekuu pääväl 1937. aastal pääliinan 14 luguhust:<br>
 1. Labajala valts<br>
 2. Rida Juku – eritants<br>
 3. Savikoja venelane – eritants<br>
