*Empty MediaWiki Message*

--- a/Hiiobi_Otto.mw
+++ b/Hiiobi_Otto.mw
@@ -1,5 +1,4 @@
 '''Hiiobi Otto''' (Ott(o) Hiiop, 29 (17).12.1865 - ?) oll’ Urvastõ kihlkunna viiulimängjä
-[http://www.flickr.com/photos/95685493@N05/ Otto Hiiop heliplaadistamisel Tallinnas 6. mail 1937]
 
 Hiiobi Otto sündünüq  29. (vana kallendri perrä 17.) detsembrikuu pääväl 1865 Helme kihlkunna Patkülä valla Talva talon, a elli eloaig Urvastõn. Tõsõq kutsiq tedä mitmõ nime perrä: lihtsähe Otto, Talva Otto, kutsuti kah „mulgis“. Käve säidse talvõ Vaabina vallakoolin. Pidi päämädselt põllomehe ammõtit, a umma põldu oll' vähä: ynnõ katõssa hektäri (25 vakamaad). Olnuq ka tulõkassa president, kümnik, ja vallavolimiis.
 
@@ -24,4 +23,10 @@ Tampere Herbert tähend’ 1936. aastal timält üles 100 luguhust. Pulsti Augus
 14. Sikusarve lugu<br>
 <br>
 
-Tuu materjaal om peri tast: A. Pulst „Mälestusi muusika alalt”, ETM fond nr. M 231:1, Säilitusühik nr. 23
+== Lätteq ==
+A. Pulst „Mälestusi muusika alalt”, ETM fond nr. M 231:1, Säilitusühik nr. 23
+
+ERA, Foto 530 (käesolevas töös lk. 13), 495(käesolevas töös lk. 11 ja 12), fotograaf P. Parikas
+Internetileheküljelt www.rahvamuusika.ee (foto allkirjaga: A. Pulst kogumismatkal 1921.a)
+
+Varblane, Marju. 2007. <i>Urvaste viiuldajad Otto Hiiop ja Kristjan Joakit ning nende repertuaar"</i> Seminaritöö. Tartu Ülikooli Viljandi Kultuuriakadeemia
