--- a/Hiiobi_Otto.mw
+++ b/Hiiobi_Otto.mw
@@ -24,9 +24,8 @@ Tampere Herbert tähend’ 1936. aastal timält üles 100 luguhust. Pulsti Augus
 <br>
 
 == Lätteq ==
-A. Pulst „Mälestusi muusika alalt”, ETM fond nr. M 231:1, Säilitusühik nr. 23
+A. Pulst <i>Mälestusi muusika alalt</i>, ETM fond nr. M 231:1, Säilitusühik nr. 23
 
-ERA, Foto 530 (käesolevas töös lk. 13), 495(käesolevas töös lk. 11 ja 12), fotograaf P. Parikas
-Internetileheküljelt www.rahvamuusika.ee (foto allkirjaga: A. Pulst kogumismatkal 1921.a)
+ERA, Foto 530, fotograaf P. Parikas
 
 Varblane, Marju. 2007. <i>Urvaste viiuldajad Otto Hiiop ja Kristjan Joakit ning nende repertuaar"</i> Seminaritöö. Tartu Ülikooli Viljandi Kultuuriakadeemia
