*Empty MediaWiki Message*

--- a/Hiiobi_Otto.mw
+++ b/Hiiobi_Otto.mw
@@ -6,7 +6,7 @@ Hiiobi Otto veli mänge kah viiulit, ni ka lellä- ja tsõdsõpujaq olnuq viiuld
 
 Ildampa, kuq Hiiobi Otto Tartun käve, opsõ tan tõist viiulit mängmä ja opas' tuud umalõ paarilisõlõ, Joakiti Kristjanilõ, kinkaq mängseväq ütenkuun inne edimäst ilmatapõlust. Viil juhtõ tä umasäetüt kuuri, kon oll' kuun kuus miist, kiä mängseväq lyytspilli ja viiuliid. Esiq mänge tä kokko kandlõ, duurkandlõ ja klavõriga.
 
-Tampere Herbert tähend’ 1936. aastal timält üles 100 luguhust. Pulsti August võtsõ timält üles 5.-6. lehekuu pääväl 1937. aastal pääliinan 14 luguhust:<br>
+Tampere Herbert tähend’ 1936. aastal timält üles 100 luguhust. Pulsti August võtsõ timält üles 5.-6. lehekuu pääväl 1937. aastal pääliinan 14 luguhust:<br><br>
 1. Labajala valts<br>
 2. Rida Juku – eritants<br>
 3. Savikoja venelane – eritants<br>
