/* Osavõtjaq artikliq ja kirotajaq */

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -7,7 +7,7 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 * [[Kandsimägi (Kiräpää)]]. [[Pruukja:Annahkur|Annahkur]] ([[Pruukja arotus:Annahkur|arotus]])
 *[[Zetod]]. [[Pruukja:Adeliine|Adeliine]] ([[Pruukja arotus:Adeliine|arotus]])
 * [[Jaigi_Juhan]]. [[Pruukja:Margareths1|Margareths1]] ([[Pruukja arotus:Margareths1|arotus]])
-* ...
+* [[Hiiobi Otto]]. [[Tsirgutii]]
 * ...
 
 
