*Empty MediaWiki Message*

--- a/Hiiobi_Otto.mw
+++ b/Hiiobi_Otto.mw
@@ -30,3 +30,6 @@ A. Pulst <i>Mälestusi muusika alalt</i>, ETM fond nr. M 231:1, Säilitusühik n
 ERA, Foto 530, fotograaf P. Parikas
 
 Varblane, Marju. 2007. <i>Urvaste viiuldajad Otto Hiiop ja Kristjan Joakit ning nende repertuaar"</i> Seminaritöö. Tartu Ülikooli Viljandi Kultuuriakadeemia
+
+== Välislingiq ==
+http://tarkadekivi.wordpress.com/urvaste-viiuldajad-ott-hiiop-ja-kristjan-joakit/
