*Empty MediaWiki Message*

--- a/Jaigi_Juhan.mw
+++ b/Jaigi_Juhan.mw
@@ -11,7 +11,7 @@ Jaigi Juhan kasvi üles [[Tsooru valla]] [[Roosigu mõisan]] ja [[Luhamõtsa]]n.
 [[1944]] läts' Jaigi Juhan [[Eesti]]st [[S'aksamaa]]lõ, säält [[Prantsusmaa]] kaolt [[Roodsi|Ruutsi]]. Jaigi Juhan kuuli [[Katrineholm]]i haigõmajan 10. [[joulukuu]] pääväl 1948. Algusõn oll' annom' timä
 tuhagaq [[Katrineholm]]i krematooriumin hoiul, sis ostiq latsõq havvaplatsi [[Stokholm]]i [[Mõtsakalmistu]] pääle. 1990 matõti tä põrm ümbre [[Talliin]]a Rahumäe kalmuaida.
 
-===Kirämehe [[Piiri Enno] mälehtüisi perrä Jaigi Juhanist===
+===Kirämehe [[Piiri Enno]] mälehtüisi perrä Jaigi Juhanist===
 "Oll' lihtsä miis'. Hinnäst uhkõs pitäq tä es mõistaq. Käve häämeelegaq rahvagaq läbi. Tälle miildü kyigigaq juttu ajjaq. Oll' tuu sis nuur vai vana, rikas vai vaenõ, pops', paremiis' vai kangõ rahvamiis'. Egäleütele oll' täl lahkõt synna ja kullõjat kõrva."
 
 [[Mihklikuu]]l 1938 peimiq [[Haani vald|Haani valla]] [[Plaani algkuul|Plaani algkoolin]] eesti raamadu 400. aastagapäivä. Jaik oll' eesti raamaduaastaga toimkunna pääsekretär'. Ta kynõl' meile yks süämest süämehe. Kingitüses tuudi tälle Haani vüügaq köüdet vilävihik, kon oll' 400 viläpääd 40 talo põllu päält. Kirämiis' nimet' tuud uma elo kygõ ilosambas kingitüses. Sääne meelenpidämine võtt' tä peris silmi pühkmä. Lilliq jagi ta nelä Haani vana imä vaihõl. [[Rüälill'|Rüälille]] kimbust tõmmas' ynnõ paar' häidsend ja tsusas' nuuq hindäle rynda." 
