*Empty MediaWiki Message*

--- a/Amoral.mw
+++ b/Amoral.mw
@@ -1,24 +1,4 @@
-{{Muusikute info <!-- Vaata Vikipeedia:Vikiprojekt_Muusikud -->
-| Nimi                = Amoral
-| Pilt                = Amoral at Tuska Open Air 2012.jpg 
-| Pildi_kirjeldus     = Amorla 2012
-| Pildi_suurus        = 
-| Horisontaalne       = 
-| Taust               =  
-| Alias               = 
-| Päritolu            = [[Soome]]
-| Stiil               = ''[[metal]]'', ''[[hard rock]]''
-| Aktiivne            = 1997  
-| Plaadifirma         = [[Imperial Cassette]]<br>[[The End Records(US)]] 
-| Seotud_artistid     = 
-| URL                 = [http://amoralweb.com]
-| Koosseis            =  
-| Endised_liikmed     =  
-}}
-
-
-
-Amoral om Soomõ rokkansambli, miä tull' kokko 1997.
+'''Amoral''' om [[Soomõ]] rokkansambli, miä tull' kokko 1997.
 
 == Liikmõq ==
 * Ben Varon
