--- a/Kiiora.mw
+++ b/Kiiora.mw
@@ -1,6 +1,12 @@
-Kiiora om 2010. aastaga suvõl kokko saanu' nuuri muusikidõ punt, kiä tollõst aost sääntse nime all üteh mängvä'. Tah pillimängupargih mängvä' Luhamaa vele' Leima Laurits ja Leima Matis (Zetodõ kiigamiis) ni Tsätski nulga näio Ämariku Evelin. Kiiora mäng seto tandsomuusikat, hindä kirotet pallo ja ka' hõimurahvidõ muuskat. 2012. aastaga detsembrih saiõ valms näide edimäne tsõõrikplaat "Püdsäjüräjidõ pido".
+'''Kiiora''' om [[2010]]. aastaga suvõl kokko saanu' nuuri muusikidõ punt, kiä tollõst aost sääntse nime all üteh mängvä'. Tah pillimängupargih mängvä' Luhamaa vele' Leima Laurits ja Leima Matis (Zetodõ kiigamiis) ni Tsätski nulga näio Ämariku Evelin. Kiiora mäng seto tandsomuusikat, hindä kirotet pallo ja ka' hõimurahvidõ muuskat. 2012. aastaga detsembrih saiõ valms näide edimäne tsõõrikplaat "Püdsäjüräjidõ pido".
 
 Kiiorah mängvä':
-Leima Matis - kiiga, karmoška, pardsipill, laul
-Leima Laurits - kitra
-Ämariku Evelin - karmoška, laul
+* Leima Matis - [[kiiga]], [[karmoška]], [[pardsipill]], laul
+* Leima Laurits - kitra
+* Ämariku Evelin - karmoška, laul
+
+== Välislingid ==
+* [http://www.tartuekspress.eu/?page=1&id=1255 Kiiora lask´ vällä vahtsõ tsõõrigu‘] Tartu Ekspress
+* [http://arhiiv.err.ee/vaata/folgialbum-kiiora FOLGIALBUM. Kiiora.] ERR
+
+[[Katõgooria:Eesti ansambliq]]
