*Empty MediaWiki Message*

--- a/Michelangelo.mw
+++ b/Michelangelo.mw
@@ -12,7 +12,18 @@
 }}
 '''Michelangelo''' (Michelangelo di Lodovico Buonarroti Simoni, 1475-1564) oll' [[itaalia]] kunstnik, kujoragoja, ehitüskunstnik, luulõtaja ja insinör. 
 
-[[Pilt:Michelangelos David.jpg|thumb|200px|left|Michelangelo raot Taavõti kujo (1504) om üts kuulsampi [[renessanss|renessansiagsit]] töid]]
+[[Pilt:Michelangelos David.jpg|thumb|200px|left| Michelangelo raot Taavõti kujo (1504) om üts kuulsampi [[renessanss|renessansiagsit]] töid]]
+<gallery>
+ 
+File:Firenze.Palvecchio.500.Michelangelo2.JPG
+File:Angel by Michelangelo - 3.JPG|
+File:Madonna michelangelo1.jpg|Madonna
+File:Leda and the Swan, After Michelangelo.jpg|Leda 
+ 
+File:Andr37.jpg| Ganymede, copia de 1532.
+File:Buonarotti-scala.jpg|Madonna
+File:Michelangelo's Pieta 5450 cut out black.jpg|
+</gallery>
 
 [[Katõgooria:Itaalia inemiseq]]
 [[Katõgooria:Itaalia kunstniguq]]
