--- a/Malta.mw
+++ b/Malta.mw
@@ -41,6 +41,7 @@ Telefonikuud'=356|
 == Rahvastik ==
 
 == Kultuur ==
+yiollkoipoiooio
 
 == Välislingiq ==
 * [http://www.gozo.us/ Photos, Webcam of Gozo]
