--- a/Malta.mw
+++ b/Malta.mw
@@ -40,8 +40,7 @@ Telefonikuud'=356|
 
 == Rahvastik ==
 
-== Kultuur ==
-yiollkoipoiooio
+houmo
 
 == Välislingiq ==
 * [http://www.gozo.us/ Photos, Webcam of Gozo]
