--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -8,7 +8,7 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 *[[Zetod]]. [[Pruukja:Adeliine|Adeliine]] ([[Pruukja arotus:Adeliine|arotus]])
 * [[Jaigi_Juhan]]. [[Pruukja:Margareths1|Margareths1]] ([[Pruukja arotus:Margareths1|arotus]])
 * [[Hiiobi Otto]]. [[Pruukja:Tsirgutii|Tsirgutii]] ([[Pruukja arotus:Tsirgutii|arotus]])
-* [[Jakapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]]
+* [[Jakapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 * .. 
 * ..
 * ..
