--- a/Moldova.mw
+++ b/Moldova.mw
@@ -8,8 +8,8 @@ Kaart=Image:LocationMoldova.png|
 Riigikiil'=[[romaania kiil'|romaania]]/[[moldova kiil']]|
 Pääliin=[[Chişinău]]|
 Riigitüübi pää=President'|
-Riigipää=[[Mihai Ghimpu]]|
-Pääministri=[[Vlad Filat]]|
+Riigipää=[[Nicolae Timofti]]|
+Pääministri=[[Iurie Leancă]]|
 Suurus=33 843|
 Suurusõ perrä=135|
 Vett=1,4%|
