/* Osavõtjaq artikliq ja kirotajaq */

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -10,8 +10,8 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 * [[Hiiobi Otto]]. [[Pruukja:Tsirgutii|Tsirgutii]] ([[Pruukja arotus:Tsirgutii|arotus]])
 * [[Jakapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 * [[Palu_Jaan]]. [[Pruukja:Amyk|Amyk]] ([[Pruukja arotus:Amyk|arotus]])
-* ..
-* ..
+* [[Kivisild (Tarto)]]. [[Pruukja:Mruut|Mruut]] ([[Pruukja arotus:Mruut|arotus]])
+* [[Oksaneni Sofi]]. [[Pruukja:Mruut|Mruut]] ([[Pruukja arotus:Mruut|arotus]])
 
 
 [[katõgooria:Vikipeediä]]
