--- a/Palu_Jaan.mw
+++ b/Palu_Jaan.mw
@@ -1,14 +1,9 @@
+'''Palu Jaan''' oll’ Kihnu viiolimängjä. Peri Linaküläst, sündünüq 1882. aastagal. Talvitsõl aol oll’ tä kängsepp ja suvõl meremiis kivilaiva pääl.
+Viiolit naas’ tä mängmä, ku oll’ 10-12-aastaganõ. Algusõh täl uma pilli es olõq. Unol oll’ viiol olõmah külq, a tuud Jaanil puttuq es lastaq. Nii naas’ Jaan hindäle esiq uno pilli perrä viiolit tegemä. Päämine tüüriist oll’ tuu jaos luitsaväits.
 
-Palu Jaan
+Jaani viiol sai kuusõ- ja saarõpuinõ. Edimätseq luuq oppõ tä unolt ni tõisilt vanolt mängjilt. Kõgõ parõmb pillimiis oll’ sõs Ull Peeter, kiä mänge viiolit rusikkinnastõh. Peetre käest oppõ Jaan kõgõ inämp lukõ. Esiq mõtõl’ Jaan hindäl vast 50 luku ollõv – labajalavalsiq, polkaq, reinlendriq, krakovjak jt. Hindä tet lugu om „Ranna reinlender“.
 
-   Palu Jaan oll’ Kihnu viiolimängjä. Peri Linaküläst, sündünüq 1882. aastagal.
-Talvitsõl aol oll’ tä kängsepp ja suvõl meremiis kivilaiva pääl.
-   Viiolit naas’ tä mängmä, ku oll’ 10-12-aastaganõ. Algusõh täl uma pilli es olõq. Unol oll’ viiol olõmah külq, a tuud Jaanil puttuq es lastaq. Nii naas’ Jaan hindäle esiq uno pilli perrä viiolit tegemä. Päämine tüüriist oll’ tuu jaos luitsaväits.
-   Jaani viiol sai kuusõ- ja saarõpuinõ. Edimätseq luuq oppõ tä unolt ni tõisilt vanolt mängjilt. Kõgõ parõmb pillimiis oll’ sõs Ull Peeter, kiä mänge viiolit rusikkinnastõh. Peetre käest oppõ Jaan kõgõ inämp lukõ.
-   Esiq mõtõl’ Jaan hindäl vast 50 luku ollõv – labajalavalsiq, polkaq, reinlendriq, krakovjak jt. Hindä tet lugu om „Ranna reinlender“.
-   Palu Jaan oll’ tunt pulmapillimiis. Tuu iist tä rahha es võtaq.
-Koolih käve pillimiis õnnõ kats’ kuud, a mõist’ iks kirotaq ni rehkendäq.
-   A.Pulst kirot’ timä kotsilõ nii:
+Palu Jaan oll’ tunt pulmapillimiis. Tuu iist tä rahha es võtaq. Koolih käve pillimiis õnnõ kats’ kuud, a mõist’ iks kirotaq ni rehkendäq. A. Pulst kirot’ timä kotsilõ nii:
 „Pillimiis om keskmist kasvo, sälg sirgõ, nägo ümärik, näoilmõq vaiknõ, pehmeq, mõtlik, tasanõ. Hiussõq valsjadsõq ja puul päälakõ pal’as. Habõnidõ asõmõl ommaq nõna all piinüq vurruq. Liikmisõh om viioldaja pikäline, a  viiolimängoh välle. Mängeh kaes uur’vahe kullõjalõ vasta.“
 
 Palu Jaani luuq, miä 1937. aastagal üles võetiq:
