*Empty MediaWiki Message*

--- a/Palu_Jaan.mw
+++ b/Palu_Jaan.mw
@@ -9,26 +9,43 @@ Palu Jaan oll’ tunt pulmapillimiis. Tuu iist tä rahha es võtaq. Koolih käve
 Palu Jaani luuq, miä 1937. aastagal üles võetiq:
 
 1.	Kalamiis (eritands)
+
 2.	Nelläpaari (eritands)
+
 3.	Ratas (eritands)
+
 4.	Sõrmõlugu (eritands)
+
 5.	Kingu valts (labajalavalss’)
+
 6.	Tibojalg (labajalavalss’)
+
 7.	Seli kõrdsi Jüri (labajalavalss’)
+
 8.	Laasi poiss (labajalavalss’)
+
 9.	Puusaluu (labajalavalss’)
+
 10.	Susi aia takah (labajalavalss’)
+
 11.	Kotlepa polka
+
 12.	Lõolugu (labajalavalss’)
+
 13.	Oh, sedä pito ja põlvõ (labajalavalss’)
+
 14.	Liivä Manni (labajalavalss’)
+
 15.	Koego valss’ (labajalavalss’)
+
 16.	Hiir’ karas’ (eritands)
+
 17.	Kulli elo (polka)
+
 18.	Aado polka
 
 
-Lätteq:
+==Lätteq==
 
 (Eesti Teatri- ja Muusikamuuseum, August Pulst, Fond nr. M 234:1, „Mälestusi muusika alalt“, säilitusühik nr. 25, lk. 792 – 793).
 
