--- a/Portugal.mw
+++ b/Portugal.mw
@@ -43,6 +43,8 @@ Telefonikuud'=351|
 == Kultuur ==
 
 == Välislingiq ==
+* [http://www.visitportugal.com/Cultures/en-US/default.html Official Travel and Tourism office website]
+* [http://tempo.growiktionary.org Weather forecast for Portugal]
 
 {{commons|Portugal}}
 
