*Empty MediaWiki Message*

--- a/Pilistvere_kihlkund.mw
+++ b/Pilistvere_kihlkund.mw
@@ -9,18 +9,18 @@
 ==Luudus==
 
 ==Aolugu==
-===Kerikut===
+===Kerikuq===
 *Pilistvere Kerik ([[Pilistvere]] külä)
 *Risti Kerik ([[Käsukonna]] külä)
 *Arussaare Taivaminemise Kerik (õigõusu kerik, [[Arussaare]] külä)
-*Kikevere Jumalaema Uinumise Kerik (''Ц.Успенiя'', õigõusu kerik, [[Kiksvere]] külä)
+*Kikevere Jumalaema Uinumise Kerik (''Ц. Успенiя'', õigõusu kerik, [[Kiksvere]] külä)
 
 <gallery>
 Pilistvere kirik.jpg|Pilistvere kerik
 Arussaare õigeusu kirik.jpg|Arussaare õigõusu kerik
 </gallery>
 
-===Mõisat===
+===Mõisaq===
 *[[Arussaare mõisa]] (''Arrosaar'') – [[riigimõisa]]
 *[[Eistvere mõisa]] (''Eigstfer'') 
 *[[Hermani mõisa]] (''Hermannshof'')
