--- a/Pilistvere_kihlkund.mw
+++ b/Pilistvere_kihlkund.mw
@@ -25,14 +25,14 @@ Arussaare õigeusu kirik.jpg|Arussaare õigõusu kerik
 *[[Eistvere mõisa]] (''Eigstfer'') 
 *[[Hermani mõisa]] (''Hermannshof'')
 *[[Imavere mõisa]] (''Immafer'')
-*[[Jalametsa mõisa]] (''Jallametz'') – Laimetsa
+*[[Jalametsa mõisa]] (''Jallametz'') – Laimetsa [[kõrvalmõisa]]
 *[[Kabala mõisa (Pilistvere)|Kabala mõis]] (''Kabbal'')
 *[[Kõo mõisa]] (''Wolmarshof'') – [[riigimõisa]]
 *[[Laimetsa mõisa]] (''Laimetz'')
 *[[Loopre mõisa]] (''Loper'')
 *[[Ollepa mõisa]] (''Ollepäh'')
 *[[Pilistvere kerikomõisa]] (''Pastorat Pillistfer'') – [[kerikomõisa]]
-*[[Võrevere mõisa]] (''Werrefer'') – Imavere
+*[[Võrevere mõisa]] (''Werrefer'') – Imavere kõrvalmõisa
 
 ==Kiil ja kultuur== 
 
