--- a/Pilistvere_kihlkund.mw
+++ b/Pilistvere_kihlkund.mw
@@ -22,16 +22,16 @@ Arussaare õigeusu kirik.jpg|Arussaare õigõusu kerik
 
 ===Mõisaq===
 *[[Arussaare mõisa]] (''Arrosaar'') – [[riigimõisa]]
-*[[Eistvere mõisa]] (''Eigstfer'') 
-*[[Hermani mõisa]] (''Hermannshof'')
-*[[Imavere mõisa]] (''Immafer'')
+*[[Eistvere mõisa]] (''Eigstfer'') - [[perismõisa]]
+*[[Hermani mõisa]] (''Hermannshof'') - perismõisa
+*[[Imavere mõisa]] (''Immafer'') - perismõisa
 *[[Jalametsa mõisa]] (''Jallametz'') – Laimetsa [[kõrvalmõisa]]
-*[[Kabala mõisa (Pilistvere)|Kabala mõis]] (''Kabbal'')
+*[[Kabala mõisa (Pilistvere)|Kabala mõis]] (''Kabbal'') - perismõisa
 *[[Kõo mõisa]] (''Wolmarshof'') – [[riigimõisa]]
-*[[Laimetsa mõisa]] (''Laimetz'')
-*[[Loopre mõisa]] (''Loper'')
-*[[Ollepa mõisa]] (''Ollepäh'')
-*[[Pilistvere kerikomõisa]] (''Pastorat Pillistfer'') – [[kerikomõisa]]
+*[[Laimetsa mõisa]] (''Laimetz'') - perismõisa
+*[[Loopre mõisa]] (''Loper'') - perismõisa
+*[[Ollepa mõisa]] (''Ollepäh'') - perismõisa 
+*[[Pilistvere kerikomõisa]] (''Pastorat Pillistfer'') – [[kerigumõisa]]
 *[[Võrevere mõisa]] (''Werrefer'') – Imavere kõrvalmõisa
 
 ==Kiil ja kultuur== 
