--- a/Pilistvere_kihlkund.mw
+++ b/Pilistvere_kihlkund.mw
@@ -31,7 +31,7 @@ Arussaare õigeusu kirik.jpg|Arussaare õigõusu kerik
 *[[Laimetsa mõisa]] (''Laimetz'') - perismõisa
 *[[Loopre mõisa]] (''Loper'') - perismõisa
 *[[Ollepa mõisa]] (''Ollepäh'') - perismõisa 
-*[[Pilistvere kerikomõisa]] (''Pastorat Pillistfer'') – [[kerigumõisa]]
+*[[Pilistvere kerigumõisa]] (''Pastorat Pillistfer'') – [[kerigumõisa]]
 *[[Võrevere mõisa]] (''Werrefer'') – Imavere kõrvalmõisa
 
 ==Kiil ja kultuur== 
