*Empty MediaWiki Message*

--- a/Määne_om_seo_maa?.mw
+++ b/Määne_om_seo_maa?.mw
@@ -1,9 +1,29 @@
 '''"Määne om seo maa?"''' om albom, kon pääl ommaq [[Uma Pido]] ja Uma Laulu võigõlusõ valituq lauluq. Albom om ilmunuq 2013. aastagal lasõrtsõõri pääl. Välläandjaq ommaq Kõrvipalu loometalu ja [[Võro Selts VKKF]].
 
+Albomi pääl om kokko 19 laulu. Plaadiga om üten vihk laulusõnnoga.
+
 ==Lauluq==
-<!--
-#"Üts ummamuudu liin" (Leisi Meelis, [[Rahmani Jan]])
--->
+
+#"Inemise' omma' eläjä'" (Pehu Jaan, [[Contra]])
+#"A mille?" ([[Rahmani Jan]], Rahmani Jan)
+#"Hoituminõ" ([[Kalla Urmas]], Kalla Urmas)
+#"Võro kiil" ([[Ilvese Aapo]], Ilvese Aapo)
+#"Valgust henge" (Ilvese Aapo, Ilvese Aapo)
+#"Tii" (Pilvre Glen/ Pajusaarõ Priit, Ilvese Aapo)
+#"Suvi" ([[Kalkuni Mari]], [[Panga Milvi]])
+#"Puupää rock'n'roll" (Rahmani Jan, Rahmani Jan)
+#"Küll ma kasu" (Ööveli Priit, Ööveli Priit/Contra)
+#"Lodi tuu ja lodi vii" (Ilvese Aapo, Ilvese Aapo)
+#"Sadamise'" (Kalla Urmas, Kalla Urmas)
+#"Haanja miis" (rahvalik, Räppo Jaan)
+#"Määne om seo maa?" (Rahmani Jan, Rahmani Jan)
+#"Kõnõtraat" (Rahmani Jan, Rahmani Jan)
+#"Kodomäng" (Paiu Aare, Wimberg/Contra)
+#"Pristan" (Ilvese Aapo, Ilvese Aapo/ Tõemäe Triin)
+#"Võromaa laulu'" (Pajusaarõ Priit, Ilvese Aapo)
+#"Leelo" (Ilvese Aapo, Ilvese Aapo)
+#"Är' ei lää'" (Volmeri Hardi/ Jürlau Roald, [[Kaplinski Jaan]])
+
 
 [[Katõgooria:Võrokeelidseq albomiq]]
 [[Katõgooria:2013 albomiq]]
