*Empty MediaWiki Message*

--- a/Määne_om_seo_maa?.mw
+++ b/Määne_om_seo_maa?.mw
@@ -1,4 +1,4 @@
-'''"Määne om seo maa?"''' om albom, kon pääl ommaq [[Uma Pido]] ja Uma Laulu võigõlusõ valituq lauluq. Albom om ilmunuq 2013. aastagal lasõrtsõõri pääl. Välläandjaq ommaq Kõrvipalu loometalu ja [[Võro Selts VKKF]].
+'''"Määne om seo maa?"''' om albom, kon pääl ommaq edimädselt (2008) ja tõsõlt (2010) [[Uma Pido|Umalt Pidolt]] ja inne mõlõmbat pito peet Uma Laulu võigõlusõlt kor'atuq lauluq. Albom om ilmunuq 2013. aastagal lasõrtsõõri pääl. Välläandjaq ommaq Kõrvipalu loometalu ja [[Võro Selts VKKF]].
 
 Albomi pääl om kokko 19 laulu. Plaadiga om üten vihk laulusõnnoga.
 
