--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -284,6 +284,17 @@
 #"Tuulõ käen" ("[[Vihmakõnõ]]", Kalkuni Mari, [[Kolga Raimond]])
 #"Tulõq, tulõq rassõ uni" ("[[Vihmakõnõ]]", Kalkuni Mari, [[Kalkuni Andreas]])
 
+==Uma Pido kuur==
+#"A mille?" ([[Rahmani Jan]], Rahmani Jan)
+#"Võro kiil" ([[Ilvese Aapo]], Ilvese Aapo)
+#"Tii" (Pilvre Glen/ Pajusaarõ Priit, Ilvese Aapo)
+#"Puupää rock'n'roll" (Rahmani Jan, Rahmani Jan)
+#"Lodi tuu ja lodi vii" (Ilvese Aapo, Ilvese Aapo)
+#"Haanja miis" (rahvalik, Räppo Jaan)
+#"Kõnõtraat" (Rahmani Jan, Rahmani Jan)
+#"Võromaa laulu'" (Pajusaarõ Priit, Ilvese Aapo)
+#"Är' ei lää'" (Volmeri Hardi/ Jürlau Roald, [[Kaplinski Jaan]])
+
 ==[[Winny Puhh]]==
 
 #"Nuudlid ja hapupiim" ("[[Täämba õdagu praadimi kunna]]")	
