/* Uma Pido kuur */

--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -285,15 +285,15 @@
 #"Tulõq, tulõq rassõ uni" ("[[Vihmakõnõ]]", Kalkuni Mari, [[Kalkuni Andreas]])
 
 ==Uma Pido kuur==
-#"A mille?" ([[Rahmani Jan]], Rahmani Jan)
-#"Võro kiil" ([[Ilvese Aapo]], Ilvese Aapo)
-#"Tii" (Pilvre Glen/ Pajusaarõ Priit, Ilvese Aapo)
-#"Puupää rock'n'roll" (Rahmani Jan, Rahmani Jan)
-#"Lodi tuu ja lodi vii" (Ilvese Aapo, Ilvese Aapo)
-#"Haanja miis" (rahvalik, Räppo Jaan)
-#"Kõnõtraat" (Rahmani Jan, Rahmani Jan)
-#"Võromaa laulu'" (Pajusaarõ Priit, Ilvese Aapo)
-#"Är' ei lää'" (Volmeri Hardi/ Jürlau Roald, [[Kaplinski Jaan]])
+#"A mille?" ("[[Määne om seo maa?]]", [[Rahmani Jan]], Rahmani Jan)
+#"Võro kiil" ("Määne om seo maa?", [[Ilvese Aapo]], Ilvese Aapo)
+#"Tii" ("Määne om seo maa?", Pilvre Glen/ Pajusaarõ Priit, Ilvese Aapo)
+#"Puupää rock'n'roll" ("Määne om seo maa?", Rahmani Jan, Rahmani Jan)
+#"Lodi tuu ja lodi vii" ("Määne om seo maa?", Ilvese Aapo, Ilvese Aapo)
+#"Haanja miis" ("Määne om seo maa?", rahvalik, Räppo Jaan)
+#"Kõnõtraat" ("Määne om seo maa?", Rahmani Jan, Rahmani Jan)
+#"Võromaa laulu'" ("Määne om seo maa?", Pajusaarõ Priit, Ilvese Aapo)
+#"Är' ei lää'" ("Määne om seo maa?", Volmeri Hardi/ Jürlau Roald, [[Kaplinski Jaan]])
 
 ==[[Winny Puhh]]==
 
