*Empty MediaWiki Message*

--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -351,6 +351,10 @@
 #"Isabeli hällülaul" ("[[Mina lätsi Siidile]]", [[Tauli Anu]], Padumäe Isabel)
 #"Vanaimä hällülaul" ("Mina lätsi Siidile", Tauli Anu, Haki Kevin)
 
+==Folkräüss==
+#"A mille?" ("[[Määne om seo maa?]]", [[Rahmani Jan]], Rahmani Jan)
+#"Är' ei lää'" ("Määne om seo maa?", Volmeri Hardi/ Jürlau Roald, [[Kaplinski Jaan]])
+
 ==Tamra Kait==
 
 #"Päiv lännü" ("[[Kõigel on kõigega seos]]", [[Tamra Kait]], Tamra Kait)
