--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -345,6 +345,10 @@
 
 #"Puupää rock'n'roll" ("[[Mina lätsi Siidile]]", [[Rahmani Jan]], Rahmani Jan)
 #"Haanja miis" ("Mina lätsi Siidile", rahvalik, [[Räppo Jaan]])
+#"Tii" ("[[Määne om seo maa?]]", Pilvre Glen/ Pajusaarõ Priit, Ilvese Aapo)
+#"Puupää rock'n'roll" ("Määne om seo maa?", Rahmani Jan, Rahmani Jan)
+#"Haanja miis" ("Määne om seo maa?", rahvalik, Räppo Jaan)
+#"Kõnõtraat" ("Määne om seo maa?", Rahmani Jan, Rahmani Jan)
 
 == Tauli Anu ==
 
