*Empty MediaWiki Message*

--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -334,13 +334,16 @@
 #"Maka',maka'" ("[[Mina lätsi Siidile]]", [[Räpinä kihlkund|Räpinä kihlkunna]] [[Võro rahvalaul|rahvalaul]])
 
 ==Nipernaadi==
-
 #"Tulõ, aga tulõ" ("[[Mul meeldivad banaanid]]", [[Pulga Jaan]], [[Pulga Jaan]])
 #"Kaits kitsõ kaararõugu pääl" ("[[Mul meeldivad banaanid]]", [[võro rahvalaul]])
 #"Är no võtku liinast naista" ("[[Mul meeldivad banaanid]]", [[võro rahvalaul]])
 
-==Tuksam ja sõbraq==
+==Kirivane==
+#"Valgust henge" ("[[Määne om seo maa?]]", Ilvese Aapo, Ilvese Aapo)
+#"Pristan" ("Määne om seo maa?", Ilvese Aapo, Ilvese Aapo/ Tõemäe Triin)
+#"Leelo" ("Määne om seo maa?", Ilvese Aapo, Ilvese Aapo)
 
+==Tuksam ja sõbraq==
 #"Uni tule huiken" ("[[Meelega]]", rahvalaul)
 #"Kui mina alles nuur viil olle" ("[[Meelega]]", rahvalaul)
 
