*Empty MediaWiki Message*

--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -361,6 +361,10 @@
 #"A mille?" ("[[Määne om seo maa?]]", [[Rahmani Jan]], Rahmani Jan)
 #"Är' ei lää'" ("Määne om seo maa?", Volmeri Hardi/ Jürlau Roald, [[Kaplinski Jaan]])
 
+==Kalla, Laube, Varblane==
+#"Hoituminõ" ("[[Määne om seo maa?]]", [[Kalla Urmas]], Kalla Urmas)
+#"Sadamise'" ("Määne om seo maa?", Kalla Urmas, Kalla Urmas)
+
 ==Tamra Kait==
 
 #"Päiv lännü" ("[[Kõigel on kõigega seos]]", [[Tamra Kait]], Tamra Kait)
