*Empty MediaWiki Message*

--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -406,8 +406,10 @@
 #"Unõlaulukõnõ" ("[[Mina lätsi Siidile]]", [[Vahtsõliina kihlkund|Vahtsõliina kihlkunna]] [[Võro rahvalaul|rahvalaul]])
 
 == Roose, Kann, Jürjendal ja Urb ==
-
 #"Silli silmä'" ("[[Suurõ' pilvõ']]", [[Hargla kihlkund|Hargla kihlkunna]] [[Võro rahvalaul|rahvalaul]])
+
+==Pehk, Contra, Tagamets==
+#"Inemise' omma' eläjä'" ("[[Määne om seo maa?]]", Pehu Jaan, [[Contra]])
 
 [[Katõgooria:Nimekiräq]]
 [[Katõgooria:Muusiga]]
