*Empty MediaWiki Message*

--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -411,6 +411,9 @@
 ==Pehk, Contra, Tagamets==
 #"Inemise' omma' eläjä'" ("[[Määne om seo maa?]]", Pehu Jaan, [[Contra]])
 
+==Nõmme Madis==
+#"Lodi tuu ja lodi vii" ("[[Määne om seo maa?]]", Ilvese Aapo, Ilvese Aapo)
+
 [[Katõgooria:Nimekiräq]]
 [[Katõgooria:Muusiga]]
 [[Katõgooria:Võro kiil]]
