--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -283,6 +283,8 @@
 #"Undsõn ilman" ("[[Vihmakõnõ]]", Kalkuni Mari/rahvalaul, Kalla Urmas/rahvalaul)
 #"Tuulõ käen" ("[[Vihmakõnõ]]", Kalkuni Mari, [[Kolga Raimond]])
 #"Tulõq, tulõq rassõ uni" ("[[Vihmakõnõ]]", Kalkuni Mari, [[Kalkuni Andreas]])
+#"Suvi" ("[[Määne om seo maa?]]", [[Kalkuni Mari]], [[Panga Milvi]])
+#"Määne om seo maa?" ("Määne om seo maa?", Rahmani Jan, Rahmani Jan)
 
 ==Uma Pido kuur==
 #"A mille?" ("[[Määne om seo maa?]]", [[Rahmani Jan]], Rahmani Jan)
