*Empty MediaWiki Message*

--- a/Võrokeelidseq_lauluq.mw
+++ b/Võrokeelidseq_lauluq.mw
@@ -367,6 +367,10 @@
 #"Hoituminõ" ("[[Määne om seo maa?]]", [[Kalla Urmas]], Kalla Urmas)
 #"Sadamise'" ("Määne om seo maa?", Kalla Urmas, Kalla Urmas)
 
+==Öövel, Pai==
+#"Küll ma kasu" ("[[Määne om seo maa?]]", Ööveli Priit, Ööveli Priit/Contra)
+#"Kodomäng" ("Määne om seo maa?", Paiu Aare, Wimberg/Contra)
+
 ==Tamra Kait==
 
 #"Päiv lännü" ("[[Kõigel on kõigega seos]]", [[Tamra Kait]], Tamra Kait)
@@ -412,9 +416,6 @@
 
 ==Pehk, Contra, Tagamets==
 #"Inemise' omma' eläjä'" ("[[Määne om seo maa?]]", Pehu Jaan, [[Contra]])
-
-==Nõmme Madis==
-#"Lodi tuu ja lodi vii" ("[[Määne om seo maa?]]", Ilvese Aapo, Ilvese Aapo)
 
 [[Katõgooria:Nimekiräq]]
 [[Katõgooria:Muusiga]]
